TODO:
* add API function to retrieve last modification date/time
* value_identifier initialize and free functions
* in io_handle_read_items used set array value instead of append ?

Optimizations:
* map (file offset and size) items and item values first read on demand ?
* pre allocate item array entries

library
* additional value type support functions
  - filetime
* what about multiple alias entries 0x6001 of a single item?
  - they are set in values table but identifier lookup will return first only
* local library support
* implement an alternative solution for sizeof( size_t ) == 8 ?

Tools
* add signal handling
* nk2export
  - add export mode like pffexport
  - export alias files instead of item values
  - export to CSV/TSV, HTML, XML
* nk2info
  - create info handle ?
  - print last modification date/time

Test:
* add autoconf/make test suite

Beta release
* remove deprecated functions in libnk2_legacy.[ch]
* remove deprecated definition in include/libnk2/mapi.h
* update man pages
* add documentation

20101023
* updated include/error.h
* updated common, liberror, libnotify, libsystem, libbfio, libfmapi, libfvalue

20100912
* updated configure
* updated libcstring, libsystem, libuna, libbfio, libfdatetime, libfguid,
  libfmapi, libfvalue, libfwnt
* updated array type
* code clean up
* changes for libfvalue update
* updated msvscpp files
* corrected help output of nk2export
* updated manuals

20100721
* updated include/codepage.h
* updated include/error.h and liberror
* updated common, libsystem, libuna, libbfio, libfdatetime, libfguid,
  libfmapi, libwnt
* updated array type
* added libfvalue
* clean up and refactoring
* fix in set codepage function
* updated codepage support for nk2export
* added README_mingw

20100706
* updated configure.ac, common, libuna, libbfio, libsystem, libfdatetime,
  libfmapi, libfwnt
* updated array type

20100628
* update for libfmapi
* updated msvcpp files

20100627