@@ -228,6 +228,15 @@ LIBNK2_EXTERN int libnk2_file_set_ascii_codepage(
                    int ascii_codepage,
                    libnk2_error_t **error );
 
+/* Retrieves the modification time
+ * The returned time is a 64-bit version of a filetime value
+ * Returns 1 if successful or -1 on error
+ */
+LIBNK2_EXTERN int libnk2_file_get_modification_time(
+                   libnk2_file_t *file,
+                   uint64_t *modification_time,
+                   libnk2_error_t **error );
+
 /* Retrieves the number of items
  * Returns 1 if successful or -1 on error
  */
