@@ -1,4 +1,4 @@
-.Dd September 12, 2010
+.Dd November 11, 2010
 .Dt nk2info
 .Os libnk2
 .Sh NAME
@@ -40,10 +40,11 @@ None
 .Sh EXAMPLES
 .Bd -literal
 # nk2info Outlook.NK2
-nk2info 20100912
+nk2info 20101111
 
 Nickfile information:
-	Number of aliases:	4
+	Last modification time	: Thu 11, 2010 09:56:01 UTC
+	Number of aliases	: 4
 
 .Ed
 .Sh DIAGNOSTICS
