@@ -69,9 +69,9 @@ void usage_fprint(
 	fprintf( stream, "\tsource: the source file\n\n" );
 
 	fprintf( stream, "\t-c:     codepage of ASCII strings, options: ascii, windows-874,\n"
-	                 "\t        windows-1250, windows-1251, windows-1252 (default), windows-1253,\n"
-	                 "\t        windows-1254, windows-1255, windows-1256, windows-1257 or\n"
-	                 "\t        windows-1258\n" );
+	                 "\t        windows-1250, windows-1251, windows-1252 (default),\n"
+	                 "\t        windows-1253, windows-1254, windows-1255, windows-1256,\n"
+	                 "\t        windows-1257 or windows-1258\n" );
 	fprintf( stream, "\t-h:     shows this help\n" );
 	fprintf( stream, "\t-l:     logs information about the exported items\n" );
 	fprintf( stream, "\t-t:     specify the target directory to export to\n"
