@@ -1,5 +1,4 @@
 TODO:
-* add API function to retrieve last modification date/time
 * value_identifier initialize and free functions
 * in io_handle_read_items used set array value instead of append ?
 
@@ -23,7 +22,6 @@ Tools
   - export to CSV/TSV, HTML, XML
 * nk2info
   - create info handle ?
-  - print last modification date/time
 
 Test:
 * add autoconf/make test suite
@@ -33,6 +31,14 @@ Beta release
 * remove deprecated definition in include/libnk2/mapi.h
 * update man pages
 * add documentation
+
+20101111
+* updated configure.ac
+* updated include/error.h, include/types.h
+* updated array type
+* updated liberror, libsystem, libbfio, libfmapi, libfvalue
+* added libnk2.rc
+* added modification time API function
 
 20101023
 * updated include/error.h
